# libreyolo

./: .gitignore  .mailmap  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.zh-CN.md  RELEASING.md  REVIEW.md  THIRD_PARTY_NOTICES.txt  pyproject.toml  readme.md
.github/workflows/: collect-traffic.yml  e2e-nightly-dev.yml  e2e-nightly-main.yml  e2e-nightly-pypi.yml  e2e-nightly.yml  install-smoke.yml  triage.yml  unit-tests.yml
analytics/github-traffic/: daily.csv  paths.csv  referrers.csv  weekly.csv
analytics/github-traffic/raw/: 2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json
docs/: checkpoint_schema.md  nomenclature.md  testing.md
docs/adr/: 0001-multi-task-architecture.md
libreyolo/: __init__.py  factory.py  tasks.py
libreyolo/backends/: base.py  coreml.py  ncnn.py  onnx.py  openvino.py  tensorrt.py  torchscript.py
libreyolo/cli/: __init__.py  aliases.py  command_utils.py  config.py  errors.py  output.py  parsing.py
libreyolo/cli/commands/: export.py  predict.py  special.py  train.py  val.py
libreyolo/common/: base_model.py
libreyolo/config/datasets/: coco-val-only.yaml  coco.yaml  coco5000.yaml
libreyolo/data/: __init__.py  dataset.py  pose_dataset.py  utils.py  yolo_coco_api.py
libreyolo/export/: __init__.py  calibration.py  config.py  coreml.py  exporter.py  ncnn.py  onnx.py  openvino.py  tensorrt.py  torchscript.py
libreyolo/inference/: ncnn.py  onnx.py  openvino.py  tensorrt.py
libreyolo/models/: __init__.py  base.py
libreyolo/models/base/: inference.py  model.py
libreyolo/models/damoyolo/: __init__.py  loss.py  model.py  nn.py  structures.py  trainer.py  utils.py
libreyolo/models/deim/: __init__.py  backbone.py  box_ops.py  common.py  decoder.py  denoising.py  encoder.py  fdr.py  loss.py  matcher.py  model.py  ms_deform.py  nn.py  trainer.py  transforms.py  utils.py
libreyolo/models/deimv2/: __init__.py  loss.py  matcher.py  model.py  nn.py  trainer.py  transforms.py  utils.py
libreyolo/models/dfine/: __init__.py  backbone.py  box_ops.py  common.py  decoder.py  denoising.py  encoder.py  fdr.py  loss.py  matcher.py  model.py  ms_deform.py  nn.py  trainer.py  transforms.py  utils.py
libreyolo/models/ec/: __init__.py  backbone.py  decoder.py  encoder.py  loss.py  model.py  nn.py  postprocess.py  trainer.py  utils.py
libreyolo/models/ecdet/: backbone.py  decoder.py  encoder.py  loss.py  model.py  nn.py  postprocess.py  trainer.py  utils.py
libreyolo/models/l2cs/: __init__.py  face.py  inference.py  model.py  nn.py  utils.py
libreyolo/models/picodet/: __init__.py  loss.py  model.py  nn.py  trainer.py  utils.py
libreyolo/models/rfdetr/: __init__.py  backbone.py  box_ops.py  config.py  dinov2.py  loss.py  lwdetr.py  matcher.py  model.py  nn.py  seg_transforms.py  segmentation.py  tensors.py  trainer.py  (+2 more)
libreyolo/rfdetr/: __init__.py  model.py
libreyolo/tracking/: __init__.py  config.py  kalman_filter.py  matching.py  strack.py  tracker.py
libreyolo/training/: __init__.py  autobatch.py  callbacks.py  config.py  ddp_spawn.py  distributed.py  ema.py  scheduler.py  trainer.py
libreyolo/utils/: download.py  drawing.py  general.py  logging.py  predict_args.py  results.py  serialization.py  video.py
libreyolo/v9/: __init__.py  model.py
libreyolo/validation/: __init__.py  base.py  coco_evaluator.py  config.py  detection_validator.py  pose_validator.py  preprocessors.py  val_plotter.py
libreyolo/yolox/: __init__.py  model.py
scripts/: collect_github_traffic.py  compare_grad_accum.py  compare_grad_accum.sh  download_mask_wearing.py  run_sample_predict.py  run_sample_predict.sh  run_sample_train.py  run_sample_val.py  spot_check_val_map.py  test_gradient_acc.txt
skills/legacy_libreyolo-add-native-detection-model/: SKILL.md
skills/libreyolo-add-native-detection-model/: SKILL.md
skills/libreyolo-add-native-pose-model/: SKILL.md
skills/libreyolo-add-native-segmentation-model/: SKILL.md
skills/libreyolo-port-model/: SKILL.md
skills/libreyolo-upload-hf-model/: SKILL.md
tests/: README.md
tests/e2e/: conftest.py  nightly_contract.py  test_cli.py  test_coreml_roundtrip.py  test_deterministic_inference.py  test_ncnn.py  test_onnx.py  test_openvino.py  test_rf1_training.py  test_rf5_training.py  test_rfdetr_seg_training.py  test_tensorrt.py  test_torchscript.py  test_tracking.py  test_training_regression.py  test_val_coco128.py  test_video.py  test_yolonas.py
tests/smoke/: install_surface.py  run_install_smoke.py
tests/unit/: test_autobatch.py  test_backend_postprocess.py  test_backend_validation_adapter.py  test_cli_aliases.py  test_cli_config.py  test_cli_output.py  test_cli_stage_errors.py  test_cli_train.py  test_cli_val.py  test_coco_validation.py  test_damoyolo.py  test_data_utils.py  test_dataset_loading.py  test_ddp_distributed.py  test_deim.py  test_deim_export.py  test_deim_trainer_smoke.py  test_deimv2.py  test_deimv2_export.py  test_deimv2_official_weights.py  test_deimv2_trainer.py  test_dependencies.py  test_dfine_backbone.py  test_dfine_ckpt_parity.py  test_dfine_endtoend_shapes.py  test_dfine_export.py  test_dfine_fdr.py  test_dfine_loss_parity.py  test_dfine_trainer_smoke.py  test_dfine_validation.py  test_ec_endtoend_shapes.py  test_ec_export.py  test_ec_loss_parity.py  test_ec_parity.py  test_ec_pose.py  test_ec_seg.py  test_ec_training_fixes.py  test_ecdet_endtoend_shapes.py  test_ecdet_export.py  test_ecdet_loss_parity.py  (+47 more)
tools/: damoyolo_coco_val.py  damoyolo_export_onnx.py  damoyolo_train_smoke.py  ddp_torchrun_smoke.py  hw_ddp_smoke.py
vision_analysis_benchmark/: README.md  benchmark_coco.py  run_full_benchmark.py
weights/: LICENSE_NOTICE.txt  README.md  _conversion_utils.py  convert_deim_weights.py  convert_deimv2_weights.py  convert_dfine_weights.py  convert_ec_weights.py  convert_ecdet_weights.py  convert_picodet_weights.py  convert_rtdetr_hgnetv2_weights.py  convert_rtdetrv2_weights.py  convert_rtdetrv4_weights.py  convert_rtmdet_weights.py  convert_yolo9_weights.py
(+141 files in other folders)
