[project]
name = "libreyolo"
version = "1.1.1"
description = "Libre YOLO - An open source YOLO library with MIT license."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LibreYOLO Team"}
]
dependencies = [
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "torch>=1.13.0",
    "torchvision>=0.11.0",
    "PyYAML>=6.0",
    "requests>=2.25.0",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.65.0",
    "pycocotools>=2.0.0",
    "typer>=0.9.0",
    "click>=8.0.0",
    "safetensors>=0.4.0",
    "scipy>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.1",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.14.0",
    "onnxsim>=0.4.0",
    "onnxruntime>=1.16.0",
]
rfdetr = [
    "transformers>=4.40.0",
]
tensorrt = [
    # No CUDA on macOS; marker drops these. Version pin must match the
    # [[tool.uv.dependency-metadata]] blocks below.
    "tensorrt-cu12==10.16.1.11; sys_platform != 'darwin'",
    "pycuda>=2022.1; sys_platform != 'darwin'",
]
openvino = [
    "openvino>=2024.0.0",
]
ncnn = [
    "pnnx",
    "ncnn",
]
tracking = []
rtdetr = []
gaze = [
    # Enables best-effort auto-download of the L2CS Gaze360 checkpoint from
    # the official Google Drive (large-file confirm-token handling). Without
    # it, LibreL2CS prints manual download instructions instead.
    "gdown>=5.1.0",
]
gaze-retinaface = [
    # Optional: parity with upstream L2CS-Net's face detector. Installs an
    # unmaintained git-only package; only pull this in if you specifically
    # want the original pipeline. Most users should plug their own face
    # detector via libreyolo.models.l2cs.CallableFaceDetector or
    # LibreYOLOFaceDetector instead.
    "face_detection @ git+https://github.com/elliottzheng/face-detection",
]
coreml = [
    "coremltools>=8.0",
]
all = [
    "libreyolo[onnx]",
    "libreyolo[rfdetr]",
    "libreyolo[tensorrt]",
    "libreyolo[openvino]",
    "libreyolo[ncnn]",
    "libreyolo[tracking]",
    "libreyolo[rtdetr]",
    "libreyolo[gaze]",
    "libreyolo[coreml]",
]

[project.scripts]
libreyolo = "libreyolo.cli:entrypoint"

[project.urls]
Homepage = "https://github.com/LibreYOLO"
Repository = "https://github.com/LibreYOLO/libreyolo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
libreyolo = ["assets/*.jpg"]

[tool.setuptools.packages.find]
include = ["libreyolo*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# tensorrt-cu12 is sdist-only and its setup.py refuses to run on macOS, so
# uv's universal lock can't extract its metadata on darwin hosts. Static
# metadata lets uv resolve the non-darwin fork without building. Bump in
# lockstep with the version pin in [project.optional-dependencies].tensorrt.
# Pull torch/torchvision from the PyTorch CUDA 12.8 index on Linux/Windows so
# `uv sync` produces a GPU-enabled environment by default. macOS keeps the
# PyPI default (CPU/MPS wheel) since download.pytorch.org has no darwin builds.
# Requires NVIDIA driver >= 555 (CUDA 12.8 runtime) on the host.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12"
version = "10.16.1.11"
requires-dist = [
    "tensorrt-cu12-libs==10.16.1.11",
    "tensorrt-cu12-bindings==10.16.1.11",
]
requires-python = ">=3.8"

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-libs"
version = "10.16.1.11"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-bindings"
version = "10.16.1.11"
requires-dist = []

[tool.ruff]
# Vendored from upstream DEIMv2. Keep local lint focused on the LibreYOLO
# wrapper/integration code instead of rewriting third-party implementation files.
extend-exclude = ["libreyolo/models/deimv2/engine"]

[tool.ty.rules]
# Rules that catch real bugs — keep as errors
invalid-parameter-default = "error"

# Rules that produce false positives with PyTorch nn.Module dynamic attrs
# and C extensions without type stubs (tensorrt, ncnn, pycuda).
# Downgrade to warnings so they don't block CI but remain visible.
unresolved-import = "warn"       # optional deps not installed in dev env
unresolved-attribute = "warn"    # nn.Module.__getattr__, C extension members
invalid-argument-type = "warn"   # torch.onnx.export kwargs, tensor ops
not-subscriptable = "warn"       # tensor[int] operations
unsupported-operator = "warn"    # tensor arithmetic
not-iterable = "warn"            # Module/tensor iterations
call-non-callable = "warn"       # Module.__call__
invalid-method-override = "warn" # template method + nn.Module patterns
invalid-assignment = "warn"      # nn.Module dynamic attrs, tensor ops
invalid-return-type = "warn"     # torch return type inference
index-out-of-bounds = "warn"     # tensor indexing
unknown-argument = "warn"        # dynamic kwargs patterns
no-matching-overload = "warn"    # torch overloaded functions
possibly-missing-attribute = "warn"

[[tool.ty.overrides]]
include = ["vision_analysis_benchmark/**", "tests/**"]

[tool.ty.overrides.rules]
# Benchmark and test code: suppress all to avoid noise
unresolved-import = "ignore"

[tool.pytest.ini_options]
addopts = "-m unit"
testpaths = ["tests"]
markers = [
    "unit: fast tests that avoid external weights or large files",
    "e2e: end-to-end tests requiring full model loading and inference",
    "general_nightly: broad nightly inference checks across all model families",
    "flagship_nightly: heavier nightly checks for flagship YOLO9/RF-DETR models",
    "export_backend: tests covering an export backend or serialized runtime format",
    "supported_backend: tests covering a release-blocking supported backend",
    "experimental_backend: tests covering an experimental backend",
    "onnx: tests covering ONNX export or inference",
    "torchscript: tests covering TorchScript export or inference",
    "tensorrt: tests requiring TensorRT",
    "trt: alias for TensorRT tests requiring TensorRT",
    "openvino: tests requiring OpenVINO",
    "ncnn: tests requiring ncnn",
    "coreml: tests requiring CoreML (macOS only)",
    "yolox: tests covering the YOLOX model family",
    "yolo9: tests covering the YOLO9 model family",
    "yolo9_e2e: tests covering the YOLOv9-E2E model family",
    "yolonas: tests covering the YOLO-NAS model family",
    "rfdetr: tests covering the RF-DETR model family",
    "dfine: tests covering the D-FINE model family",
    "deim: tests covering the DEIM model family",
    "deimv2: tests covering the DEIMv2 model family",
    "ec: tests covering the ECDet model family",
    "rtdetr: tests covering the RT-DETR model family",
    "rtdetrv2: tests covering the RT-DETRv2 model family",
    "rtdetrv4: tests covering the RT-DETRv4 model family",
    "picodet: tests covering the PICODET model family",
    "damoyolo: tests covering the DAMO-YOLO model family",
    "rtmdet: tests covering the RTMDet model family",
    "l2cs: tests covering the L2CS gaze estimation family",
    "rf1: RF1 training tests",
    "rf5: RF5 training benchmark tests",
    "slow: slow tests that may take several minutes",
]
